--- a/core/templates/core/footer.html
+++ b/core/templates/core/footer.html
@@ -1,7 +1,9 @@
-{% load static %}
-<!-- templates/components/footer.html -->
 <footer>
-    <!-- Contenido del footer original -->
+    <p><strong>Derechos reservados para la práctica</strong></p>
+    <div class="contact-info">
+        <span><i class="fa-solid fa-phone"></i> 445 121 8181</span>
+        <span><i class="fa-solid fa-envelope"></i> refugioanimalalfaa.c@hotmail.com</span>
+        <span><i class="fa-brands fa-instagram"></i> refugio_animal_alfa_ac</span>
+        <span><i class="fa-brands fa-tiktok"></i> refugio_animal_alfa</span>
+    </div>
 </footer>
-</body>
-</html>
