se agrego el registro con funcionalidad de tipo de usuario pero no muestra para colocar la contraseña

--- a/core/templates/core/header.html
+++ b/core/templates/core/header.html
@@ -1,6 +1,7 @@
+{% load static %} 
 <nav class="navbar navbar-expand-lg navbar-custom">
     <div class="container-fluid">
-        <img src="img/logo.jpg" alt="">
+        <img src="{% static 'img/logo.jpg' %}" alt="">
         <h3>Refugio Animal Alfa A.C.</h3>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -8,59 +9,66 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <!-- OPCIONES SIN INICIO DE SESION -->
-                 <li class="nav-item">
+                
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'index' %}">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="">Adoptar</a>
+                    <a class="nav-link" href="#">Adoptar</a>
                 </li>
-<li class="nav-item">
-    <a class="nav-link" href="{% url 'lista_adoptados' %}">Adoptados</a>
-</li>
-<li class="nav-item">
-    <a class="nav-link" href="{% url 'productos' %}">Productos</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'lista_adoptados' %}">Adoptados</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'productos' %}">Productos</a>
                 </li>
 
-                <!-- OPCIONES CON INICIO DE SESION: USUARIO-->
-                
-                    <li class="nav-item">
-                        <a class="nav-link" href="lista_solicitudes.php">Mis solicitudes</a>
-                    </li>
-                
-                
-                <!-- OPCIONES CON INICIO DE SESION: ADMIN-->
-                
-                    <li class="nav-item">
-                        <a class="nav-link" href="lista_solicitudes.php">Solicitudes</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Agregar
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="formularios/f-adopcion.php">En adopción</a></li>
-                            <li><a class="dropdown-item" href="formularios/f-adoptados.php">Adoptados</a></li>
-                            <li><a class="dropdown-item" href="formularios/f-productos.php">Productos</a></li>
-                            <li><a class="dropdown-item" href="formularios/f-avisos.php">Avisos</a></li>
-                            <li><a class="dropdown-item" href="formularios/f-servicios.php">Servicios</a></li>
-                            <li><a class="dropdown-item" href="Lista_EnAdopcion.php">Lista adopción</a></li>
-                            <li><a class="dropdown-item" href="Lista_Usuarios.php">Lista usuarios</a></li>
-                        </ul>
-                    </li>
-                
+                {% if user.is_authenticated %}
+                    {% if user.is_staff %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Solicitudes</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Agregar
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">En adopción</a></li>
+                                <li><a class="dropdown-item" href="#">Adoptados</a></li>
+                                <li><a class="dropdown-item" href="#">Productos</a></li>
+                                <li><a class="dropdown-item" href="#">Avisos</a></li>
+                                <li><a class="dropdown-item" href="#">Servicios</a></li>
+                                <li><a class="dropdown-item" href="#">Lista adopción</a></li>
+                                <li><a class="dropdown-item" href="#">Lista usuarios</a></li>
+                            </ul>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Mis solicitudes</a>
+                        </li>
+                    {% endif %}
+
+                {% endif %}
             </ul>
+
             <div class="ms-auto d-flex align-items-center gap-2">
-                
-                    <form action="logout.php" method="post" class="d-inline">
+                {% if user.is_authenticated %}
+                    
+                    <span class="navbar-text">
+                        Hola, {{ user.first_name }}
+                    </span>
+                    <form action="{% url 'logout' %}" method="post" class="d-inline">
+                        {% csrf_token %}
                         <button type="submit" class="btn btn-danger btn-sm">Logout</button>
                     </form>
-                        
-                        <a href="{% url 'login' %}" class="btn btn-light">Login</a>
-                        <a href="registro.php" class="btn btn-outline-light">Registrarse</a>
+
+                {% else %}
                     
+                    <a href="{% url 'login' %}" class="btn btn-light">Login</a>
+                    <a href="{% url 'registro' %}" class="btn btn-outline-light">Registrarse</a>
                 
+                {% endif %}
             </div>
         </div>
     </div>
