ya funciona el registro y los tipos de usuario

--- a/usuarios/templates/usuarios/registro.html
+++ b/usuarios/templates/usuarios/registro.html
@@ -70,9 +70,9 @@
             </div>
 
             <div class="form-group col-6">
-                <label for="{{ form.password.id_for_label }}">Contraseña:</label>
-                {{ form.password }}
-                <div id="errorPass" class="text-danger small">{{ form.password.errors }}</div>
+                <label for="{{ form.password1.id_for_label }}">Contraseña:</label>
+                {{ form.password1 }}
+                <div id="errorPass" class="text-danger small">{{ form.password1.errors }}</div>
             </div>
 
             <div class="form-group col-6">
