--- a/core/templates/core/header.html
+++ b/core/templates/core/header.html
@@ -14,7 +14,7 @@
                     <a class="nav-link" href="{% url 'index' %}">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Adoptar</a>
+                    <a class="nav-link" href="{% url 'adoptar' %}">Adoptar</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'lista_adoptados' %}">Adoptados</a>
