--- a/core/templates/core/header.html
+++ b/core/templates/core/header.html
@@ -26,7 +26,7 @@
                 {% if user.is_authenticated %}
                     {% if user.is_staff %}
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Solicitudes</a>
+                            <a class="nav-link" href="{% url 'lista_solicitudes' %}">Solicitudes</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
