--- a/core/templates/core/header.html
+++ b/core/templates/core/header.html
@@ -34,7 +34,7 @@
                                 Agregar
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">En adopción</a></li>
+                                <li><a class="dropdown-item" href="{% url 'animal_crear' %}">En adopción</a></li>
                                 <li><a class="dropdown-item" href="#">Adoptados</a></li>
                                 <li><a class="dropdown-item" href="#">Productos</a></li>
                                 <li><a class="dropdown-item" href="#">Avisos</a></li>
