--- a/core/templates/core/header.html
+++ b/core/templates/core/header.html
@@ -45,7 +45,7 @@
                         </li>
                     {% else %}
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Mis solicitudes</a>
+                            <a class="nav-link" href="{% url 'lista_solicitudes' %}">Mis solicitudes</a>
                         </li>
                     {% endif %}
 
