se completaron los puntos de la tarea de la api en el alpartado de productos, tambien se agrego la opcion para agregar productos, los filtros de productos en el apartado de productos

--- a/core/templates/core/header.html
+++ b/core/templates/core/header.html
@@ -36,7 +36,7 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="{% url 'animal_crear' %}">En adopción</a></li>
                                 <li><a class="dropdown-item" href="#">Adoptados</a></li>
-                                <li><a class="dropdown-item" href="#">Productos</a></li>
+                                <li><a class="dropdown-item" href="{% url 'producto_crear' %}">Productos</a></li>
                                 <li><a class="dropdown-item" href="#">Avisos</a></li>
                                 <li><a class="dropdown-item" href="#">Servicios</a></li>
                                 <li><a class="dropdown-item" href="#">Lista adopción</a></li>
