--- a/animales/templates/animales/adoptar.html
+++ b/animales/templates/animales/adoptar.html
@@ -50,7 +50,6 @@
         {% if page_obj.has_other_pages %}
             <nav aria-label="Page navigation example">
                 <ul class="pagination justify-content-center">
-                    
                     {% if page_obj.has_previous %}
                         <li class="page-item">
                             <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Anterior">
@@ -92,26 +91,36 @@
         </div>
 
     <div class="modal fade" id="animalModal" tabindex="-1" aria-labelledby="modalTitle" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="modalTitle">Formulario de Adopción</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modalTitle">Formulario de Adopción</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+            </div>
+            
+            <div class="modal-body">
+                <p id="mensaje-adopcion">Se está haciendo una solicitud por el animal.</p>
+                
+                <div class="mb-3">
+                    <label for="id_comprobante" class="form-label">Comprobante de Domicilio (PDF, JPG, PNG):</label>
+                    <input class="form-control" type="file" id="id_comprobante" accept="application/pdf,image/jpeg,image/png">
                 </div>
-                <div class="modal-body">
-                    <div class="mb-3">
-                        <p id="mensaje-adopcion">Se está haciendo una solicitud por el animal.</p>
-                        <div id="mensaje-resultado" class="mt-3 text-center" style="display: none;"></div>
-                        <h3>¿Desea continuar con la solicitud?</h3>
-                    </div>
+                <div class="mb-3">
+                    <label for="id_ine" class="form-label">Identificación (INE/IFE) (PDF, JPG, PNG):</label>
+                    <input class="form-control" type="file" id="id_ine" accept="application/pdf,image/jpeg,image/png">
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                    <button type="button" class="btn btn-primary" id="enviar-solicitud">Enviar solicitud</button>
-                </div>
+                
+                <div id="mensaje-resultado" class="mt-3 text-center" style="display: none;"></div>
+                
+                <h3 class="mt-3">¿Desea continuar con la solicitud?</h3>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-primary" id="enviar-solicitud">Enviar solicitud</button>
             </div>
         </div>
     </div>
+</div>
     {% include 'core/footer.html' %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     
